starting custom component

--- a/web/missionstreetchartingcompany.html
+++ b/web/missionstreetchartingcompany.html
@@ -14,11 +14,12 @@
   <body>
     <h1>Missionstreetchartingcompany</h1>
     
-    <p>Hello world from Dart!</p>
+    <h3>The Mission Street Charting Company Presents</h3>
+    <h2><polymer-mscc-gauge></h2>
     
     <div id="sample_container_id">
       <click-counter count="5"></click-counter>
     </div>
-
+    <ga
   </body>
 </html>
