--- a/web/mscc-chart.html
+++ b/web/mscc-chart.html
@@ -1,4 +1,4 @@
-<polymer-element name="polymer-mscc-chart" attributes="type">
+<polymer-element name="polymer-mscc-chart">
   <template>
     <style>
       div {
@@ -11,9 +11,9 @@
         margin-bottom: 20px;
       }
     </style>
-    <div>
-      <button on-click="{{increment}}">Click me</button><br>
-      <span>(click count: {{count}})</span>
-    </div>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <div id="polymer-mscc-chart" style="width: 400px; height: 400px;"></div>
   </template>
-  <script type="application/dart" src="clickcounter.dart"></script>
+  <script type="application/dart" src="mscc-chart.dart"></script>
+</polymer-element>
+  
