--- a/web/mscc-chart.html
+++ b/web/mscc-chart.html
@@ -3,12 +3,9 @@
     <div id="gauge" style="width: 400px; height: 400px;"></div>
     <form class="center">
        <h2>Move the slider to change the value:</h2>
-       <input id="slider" style="width: 400px" type="range" max="{{max}}" value="{{value}}"/>
+       <input id="slider" style="width: 400px" type="range" max="{{max}}" value="{{ value | asString }}"/>
     </form>
   </template>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-  <script type="text/javascript" src="packages/browser/dart.js"></script>
-  <script type="text/javascript" src="packages/browser/interop.js"></script>
   <script type="application/dart" src="mscc-chart.dart"></script>
 </polymer-element>
-  
