--- a/web/index.html
+++ b/web/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sample app</title>
-    <link rel="stylesheet" href="missionstreetchartingcompany.css">
+    <title>Mission Street Charting Company</title>
+    <link rel="stylesheet" href="index">
     
     <link rel="import" href="mscc-chart.html">
     <script type="application/dart">export 'package:polymer/init.dart';</script>
     <script src="packages/browser/dart.js"></script>
   </head>
   <body>
-    <h1>Mission Street Charting Company</h1>
-    
-    <h3>The Mission Street Charting Company Presents</h3>
+    <h1>Mission Street Charting Company presents</h1>
     <h2>polymer-mscc-chart</h2>
 
     <polymer-mscc-chart
