created a resize event - although not entirely sure whether im doing it right

--- a/web/index.html
+++ b/web/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Mission Street Charting Company</title>
-    <link rel="stylesheet" href="index">
-    
+
     <link rel="import" href="mscc-chart.html">
-    <script type="application/dart">export 'package:polymer/init.dart';</script>
-    <script src="packages/browser/dart.js"></script>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <h1>Mission Street Charting Company presents</h1>
@@ -23,5 +21,8 @@
       minorTicks="5"
       value="70"
      ></polymer-mscc-chart>
+
+    <script type="application/dart">export 'package:polymer/init.dart';</script>
+    <script src="packages/browser/dart.js"></script>
   </body>
 </html>
