--- a/web/mscc-chart.html
+++ b/web/mscc-chart.html
@@ -1,10 +1,10 @@
 <polymer-element name="polymer-mscc-chart">
-  <template>
-    <div id="gauge" style="width: 400px; height: 400px;"></div>
-    <form class="center">
-       <h2>Move the slider to change the value:</h2>
-       <input id="slider" style="width: 400px" type="range" max="{{max}}" value="{{ value | asString }}"/>
-    </form>
+  <template resize="{{resize}}">
+    <link href="mscc-chart.css" rel="stylesheet">
+    
+    <div id="gauge"></div>
+    <h2>Move the slider to change the value:</h2>
+    <input id="slider" type="range" max="{{max}}" value="{{ value | asString }}"/>
   </template>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type="application/dart" src="mscc-chart.dart"></script>
